add default connect and response timeouts

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,6 +5,8 @@ test.script.location=report/jmeter_api_sample.jmx
 test.report.file.jtl=report/report.jtl
 test.report.file.csv=report/report.csv
 test.report.file.html=report/html-report
-test.rampUp=5
-test.numThreads=5
-test.loops=2
+test.rampUp=2
+test.numThreads=2
+test.loops=1
+test.default.connectTimeout=3000
+test.default.responseTimeout=3000
