--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
             <version>${jaxb.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        
+        <!-- JAXB needs javax.activation module (jdk9+) -->
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
     </dependencies>
 
 
